<resources>
    <string name="app_name">FestiveApp</string>
    <string name="settings_language_selection_title">Select Language</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_brazilian_portuguese">Português (Brasil)</string>
    <string name="settings_content_description_back">Back</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_header_account">Account</string>
    <string name="settings_header_appearance">Appearance</string>
    <string name="settings_header_actions">Actions</string>
    <string name="settings_dark_mode_title">Dark Mode</string>
    <string name="settings_logout_button_title">Logout</string>
    <string name="settings_login_button_title">Login</string>
    <string name="settings_language_description">Select your language</string>
    <string name="settings_account_information_fallback">Account Information</string>
</resources>