...
        add(
            ClickableSettingsItem(
                title = stringResource(id = R.string.settings_language_title),
                description = currentLanguageDisplay, // Use dynamic language display
                customIconResId = R.drawable.language_ic,
                onClick = onLanguageSettingsClicked,
                modifier = Modifier.testTag("languageSettingItem") // Added testTag
            )
        )

        // Actions Section
        add(SettingsHeader(stringResource(id = R.string.settings_header_actions)))
        if (uiState.isUserLoggedIn) {
...
                Spacer(modifier = Modifier.width(16.dp))
            }
            Column(modifier = Modifier.weight(1f)) {
                Text(text = item.title, style = MaterialTheme.typography.bodyLarge)
                item.description?.let {
                    val descriptionModifier = if (item.title == stringResource(id = R.string.settings_language_title)) {
                        Modifier.testTag("currentLanguageText")
                    } else {
                        Modifier
                    }
                    Text(
                        text = it,
                        style = MaterialTheme.typography.bodySmall,
...
