<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigation_home">Home</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_events">Events</string>
</resources>